Bug 307535 - Does not show when it is connecting
Summary: Does not show when it is connecting
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: presence-applet (other bugs)
Version First Reported In: 0.5.0
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-28 15:27 UTC by David Edmundson
Modified: 2012-09-28 15:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.5.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2012-09-28 15:27:15 UTC
Plasmoid should show if Tp is currently connecting with a busy icon
Comment 1 Martin Klapetek 2012-09-28 15:28:32 UTC
Git commit 2ddf22e5b3643be2a3762ed4713865f922c57af7 by Martin Klapetek.
Committed on 28/09/2012 at 17:27.
Pushed by mklapetek into branch 'kde-telepathy-0.5'.

Show busy indicator over the icon when connecting

Reviewed-by: David Edmundson
FIXED-IN: 0.5.1

M  +1    -0    src/presenceapplet.cpp

http://commits.kde.org/telepathy-presence-applet/2ddf22e5b3643be2a3762ed4713865f922c57af7