Show busy indicator over the icon when connecting

Reviewed-by: David Edmundson
BUG: 307535
FIXED-IN: 0.5.1